--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <ul>
     <li>7.18 第三章 A1–A20</li>
     <li>7.19 第三章 A21–A40</li>
+    <li>7.20 休息</li>
+    <li>7.21 第三章 A41–A52</li>
   </ul>
 </body>
 </html>
