--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AP Calculus</title>
+  <link rel="preconnect" href="https://rsms.me/">
+  <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   <style>
     body {
       margin: 0 20%;
+    }
+    :root {
+      font-family: Inter, sans-serif;
+      font-feature-settings: 'liga' 1, 'calt' 1; /* fix for Chrome */
+    }
+    @supports (font-variation-settings: normal) {
+      :root { font-family: InterVariable, sans-serif; }
     }
   </style>
 </head>
@@ -15,6 +24,10 @@
   <a href="AP Calculus.pdf">PDF 文件</a>
   <h3>作业</h3>
   <ul>
+    <li>7.14</li>
+    <li>7.15</li>
+    <li>7.16</li>
+    <li>7.17 休息</li>
     <li>7.18 第三章 A1–A20</li>
     <li>7.19 第三章 A21–A40</li>
     <li>7.20 休息</li>
